--- a/package.json
+++ b/package.json
@@ -6,21 +6,7 @@
   "scripts": {
     "test": "NODE_ENV=test LOG_LV=info ./node_modules/.bin/mocha test/bootstrap.js test/**/*.test.js"
   },
-  "devDependencies": {
-    "chance": "^1.0.18",
-    "connect-sqlite3": "^0.9.11",
-    "fs-extra": "^7.0.1",
-    "istanbul": "0.4.5",
-    "mocha": "6.0.2",
-    "rimraf": "^2.6.3",
-    "sinon": "7.2.7",
-    "supertest": "3.4.2",
-    "we-core": "^2.1.0",
-    "we-plugin-acl": "^1.2.13",
-    "we-plugin-auth": "^2.3.1",
-    "we-plugin-user": "^2.0.1",
-    "we-test-tools": "wejs/we-test-tools#0.3.21"
-  },
+  "devDependencies": {},
   "keywords": [
     "wejs-plugin"
   ],
@@ -28,15 +14,7 @@
   "license": "MIT",
   "author": "Alberto Souza <contato@albertosouza.net>",
   "wejs": {
-    "dependencies": {
-      "we-plugin-acl": true,
-      "we-plugin-auth": true,
-      "we-plugin-user": true
-    },
-    "plugins": {
-      "we-plugin-acl": true,
-      "we-plugin-auth": true,
-      "we-plugin-user": true
-    }
+    "dependencies": {},
+    "plugins": {}
   }
 }
